Rename the resource name GO to G to make it easier for @jhorman.

--- a/Wigo/en.lproj/Localizable.strings
+++ b/Wigo/en.lproj/Localizable.strings
@@ -18,6 +18,6 @@
 "TAP" = "%@ tapped you";
 "T" = "%@ tapped you";
 "GOINGOUT" = "%@ is going out";
-"GO" = "%@ is going out";
+"G" = "%@ is going out";
 "GROUP_UNLOCKED" = "%@ was just unlocked";
 "GU" = "%@ was just unlocked";
