Favorites are now pulled from the server. It's not saving it yet.

--- a/Wigo/en.lproj/Localizable.strings
+++ b/Wigo/en.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "FF" = "%@ just joined WiGo";
 "TAP" = "%@ wants to see you out";
 "T" = "%@ wants to see you out";
-"GOINGOUT" = "%@ is going out";
-"G" = "%@ is going out";
+"GOINGOUT" = "%@ is going out!";
+"G" = "%@ is going out!";
 "GROUP_UNLOCKED" = "%@ was just unlocked";
 "GU" = "%@ was just unlocked";
