--- a/Wigo/en.lproj/Localizable.strings
+++ b/Wigo/en.lproj/Localizable.strings
@@ -15,8 +15,8 @@
 "FA" = "%@ accepted your follow request";
 "FACEBOOK_FOLLOW" = "%@ just joined WiGo";
 "FF" = "%@ is now following you";
-"TAP" = "%@ wants to see you out";
-"T" = "%@ wants to see you out";
+"TAP" = "%@ wants to see you out at %@";
+"T" = "%@ wants to see you out at %@";
 "GOINGOUT" = "%@ is going out";
 "G" = "%@ is going out";
 "GROUP_UNLOCKED" = "%@ was just unlocked";
