Added event highlights with a button to see event conversation

--- a/Wigo/en.lproj/Localizable.strings
+++ b/Wigo/en.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "FR" = "%@ would like to follow you";
 "FOLLOW_ACCEPTED" = "%@ accepted your follow request";
 "FA" = "%@ accepted your follow request";
-"FACEBOOK_FOLLOW" = "%@ just joined WiGo";
+"FACEBOOK_FOLLOW" = "%@ just joined Wigo";
 "FF" = "%@ is now following you";
 "TAP" = "%@ wants to see you out %@";
 "T" = "%@ wants to see you out %@";
